# multisig

./: .gitignore  .prettierignore  Anchor.toml  package.json
programs/multisig/: Cargo.toml
programs/multisig/src/: lib.rs
tests/: multisig.spec.ts
